<resources>
    <string name="app_name">Best Wallpapers</string>
    <string name="explorar">Explorar</string>
    <string name="siguiendo">Siguiendo</string>
    <string name="ajustes">Ajustes</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="buscar">Buscar</string>
    <string name="popular">Popular</string>
    <string name="naturaleza">Naturaleza</string>
    <string name="sugeridos">Sugeridos</string>
    <string name="ver_mas">Ver más</string>
    <string name="sinResultados">No hay resultados.</string>
    <string name="descargar">Descargar</string>
    <string name="establecer">Establecer</string>
    <string name="caption">Caption</string>
    <string name="creador">Creador</string>
    <string name="choose">Elija una opción</string>
    <string name="pantalla_de_bloqueo">Pantalla de bloqueo</string>
    <string name="pantalla_principal">Pantalla principal</string>
    <string name="cerrar">Cerrar</string>
    <string name="establecer_en_ambas">Establecer en ambas</string>

    <string name="firebase_code">bestwallpapers-1d9b2</string>
    <string name="contrase_a">Contraseña</string>
    <string name="email">Email</string>
    <string name="nombre">Nombre</string>
    <string name="log_in">ENTRAR</string>
    <string name="register">Registrate</string>
    <string name="login">LOGIN</string>
    <string name="crear_cuenta">¿No tienes cuenta?</string>
    <string name="ir_login">¿Ya tienes una cuenta?</string>
    <string name="wallpaper">wallpaper</string>
    <string name="favoritos">Favoritos</string>

    <string name="no_favoritos">Ningún wallpaper</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="default_bio">Sin biografía.</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="default_gallery_storage">My Videos</string>
    <string name="title_auto_upload">Auto upload</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the app space. Glad to Help in anyway!</string>
    <string name="app_version">3.5</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.androidhive.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="version_actual">Versión actual</string>
    <string name="informacion">Información</string>
    <string name="claro">Claro</string>
    <string name="tema">Tema</string>
    <string name="fondos_aleatorios">Los fondos establecidos serán aleatorios.</string>
    <string name="fuente">Fuente</string>
    <string name="duracion_fondo">Cada fondo de pantalla permanecerá 6 horas.</string>
    <string name="intervalo">Intervalo</string>
    <string name="opciones">Opciones</string>
    <string name="cambio_periodico">El fondo se cambiará automáticamente de manera periódica.</string>
    <string name="cambiar_fondos_automaticamente">Cambiar fondos automáticamente</string>
    <string name="usuarios_que_sigo"> usuarios siguiendo</string>
    <string name="versionNumber">1.0</string>
    <string name="editar_perfil">Editar perfil</string>
    <string name="mejorar_cuenta">Mejorar cuenta</string>
    <string name="enviar_sms">Enviar Email</string>
    <string name="introduce_tu_direcci_n_de_correo_te_enviaremos_un_email_para_poder_recuperar_tu_contrase_a">Introduce tu dirección de correo. Te enviaremos un email para poder recuperar tu contraseña.</string>
    <string name="cambiar_contrase_a">cambiar contraseña</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="olvidaste_tu_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="modo_oscuro">Modo oscuro</string>

    <string-array name="intervalItems">
        <item>Cada 2 horas</item>
        <item>Cada 6 horas</item>
        <item>Cada 12 horas</item>
        <item>1 vez al dia</item>
        <item>1 vez a la semana</item>
    </string-array>

    <string-array name="fuente">
        <item>Aleatorios</item>
        <item>Favoritos</item>
    </string-array>
</resources>