<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AjustesFragment"
    android:orientation="vertical"
    android:background="?attr/color_fondo">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/textoToolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/product_sans_bold"
            android:text="@string/ajustes"
            android:textColor="?attr/textColors"
            android:textSize="19sp" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="10dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/user_black"
                        app:civ_border_color="#000000"
                        app:civ_border_width="2dp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="90dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/usuarioActual"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginTop="10dp"
                            android:fontFamily="@font/product_sans_bold"
                            android:maxLength="20"
                            android:maxLines="1"
                            android:textColor="?attr/textColors"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/bio"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:fontFamily="@font/product_sans_regular"
                            android:maxLength="20"
                            android:maxLines="1"
                            android:textColor="?attr/textColors"
                            android:textSize="15sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/editarBoton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="20dp"
                        android:background="@drawable/rounded_shape_follow_button"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:backgroundTint="@android:color/transparent"
                            android:src="@drawable/editar" />

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/usuariosSiguiendo"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/product_sans_bold"
                    android:text="@string/usuarios_que_sigo"
                    android:textColor="?attr/textColors"
                    android:textSize="14sp" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="4">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="3.5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginBottom="5dp"
                        android:fontFamily="@font/product_sans_bold"
                        android:text="@string/cambiar_fondos_automaticamente"
                        android:textColor="?attr/textColors"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:fontFamily="@font/product_sans_regular"
                        android:text="@string/cambio_periodico"
                        android:textColor="?attr/colorHintGrey"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="30dp"
                    android:orientation="vertical">

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/toggleButton1"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:checked="false"
                        android:theme="@style/SCBSwitch" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="4">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="3.5"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:fontFamily="@font/product_sans_bold"
                        android:text="@string/modo_oscuro"
                        android:textColor="?attr/textColors"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="30dp"
                    android:orientation="vertical">

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/toggleButton2"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:checked="false"
                        android:theme="@style/SCBSwitch" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/product_sans_bold"
                android:text="@string/opciones"
                android:textColor="?attr/textColors"
                android:textSize="13sp" />

            <LinearLayout
                android:id="@+id/intervalo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/product_sans_bold"
                    android:text="@string/intervalo"
                    android:textColor="?attr/textColors"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:fontFamily="@font/product_sans_regular"
                    android:text="@string/duracion_fondo"
                    android:textColor="?attr/colorHintGrey"
                    android:textSize="11sp" />

            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/product_sans_bold"
                android:text="@string/informacion"
                android:textColor="?attr/textColors"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/product_sans_bold"
                    android:text="@string/version_actual"
                    android:textColor="?attr/textColors"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:fontFamily="@font/product_sans_regular"
                    android:text="@string/versionNumber"
                    android:textColor="?attr/colorHintGrey"
                    android:textSize="11sp" />

            </LinearLayout>

            <Button
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:layout_marginBottom="85dp"
                android:background="@drawable/rounded_shape_follow_button"
                android:fontFamily="@font/product_sans_bold"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/cerrar_sesi_n"
                android:textColor="@color/white"
                android:textSize="12sp" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>