<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:src="@drawable/logo_transparent" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/white_border_rounded">

            <EditText
                android:id="@+id/emailLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="17dp"
                android:layout_toEndOf="@+id/emailIcon"
                android:background="@android:color/transparent"
                android:fontFamily="@font/product_sans_medium"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingTop="15dp"
                android:paddingEnd="17dp"
                android:paddingBottom="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/emailIcon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="17dp"
                android:src="@drawable/ic_mail" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="62dp"
            android:background="@drawable/white_border_rounded">

            <EditText
                android:id="@+id/passwordLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/passIcon"
                android:background="@android:color/transparent"
                android:fontFamily="@font/product_sans_medium"
                android:hint="@string/contrase_a"
                android:inputType="textPassword"
                android:maxLines="1"
                android:layout_marginStart="17dp"
                android:paddingTop="15dp"
                android:paddingEnd="17dp"
                android:paddingBottom="15dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/passIcon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="17dp"
                android:src="@drawable/ic_password" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="62dp"
            android:layout_marginRight="62dp">

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="25dp"
                android:background="@drawable/rounded_white"
                android:fontFamily="@font/product_sans_bold"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:text="@string/log_in"
                android:textColor="#000"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/olvidarContraseña"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/product_sans_regular"
                android:text="@string/olvidaste_tu_contrase_a"
                android:textColor="#fff"
                android:textSize="14sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/registerLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="55dp"
                android:fontFamily="@font/product_sans_regular"
                android:text="@string/crear_cuenta"
                android:textColor="#fff"
                android:textSize="17sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>